--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -29,7 +29,7 @@
 			function addStyle(styles){var css=document.createElement('style');if(css.styleSheet){css.styleSheet.cssText=styles}else{css.appendChild(document.createTextNode(styles))}document.getElementsByTagName("head")[0].appendChild(css)}var styles='nav#nav1 li button#fallback-button{display:none !important;visibility:hidden !important}';window.onload=function(){addStyle(styles)};
 		</script>
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-31768072-6"></script>
-		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>  	
+		<script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments)}gtag('js',new Date());gtag('config','UA-31768072-6');</script>	
 	</head>
 
 	<!-- HTML code in this file adapted from Adrian S. Wisnicki's One More Voice website (https://onemorevoice.org/); released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). -->
@@ -89,6 +89,17 @@
 						<h3 id="materials">Organization and Suggested Materials</h3>
 
 						<p>This lesson plan is designed with flexibility in mind so that instructors can adapt and adopt it to meet their departmental/institutional requirements and their own pedagogical goals. The primary and secondary materials have been laid out in five sections to mimic a hypothetical five-week unit, along with sample discussion questions that act as starting points for each class. Instructors can adapt this lesson plan for a unit in a semester-long introductory course for undergraduates about Victorian literature, Victorian poetry, or poetry more broadly, or they can scale the lesson plan up for an advanced course about these topics. Each week in this lesson plan could also stand on its own, meaning that instructors could simply use certain segments as needed. Feedback or suggestions about any part of this lesson plan are welcome.</p>
+
+						<aside class="breakout-quote bennett-coverley">
+							<div>
+								<p>“Wat a joyful news, miss Mattie,<br/>
+									I feel like me heart gwine burs<br/>
+									Jamaica people colonizin<br/>
+									Englan in reverse.”</p>
+
+								<p class="right">— Louise Bennett-Coverley, “Colonization in Reverse”</p>
+							</div>
+						</aside>
 
             <section aria-labelledby="materials-1">
               <h4 id="materials-1">Heavy Is The Head That Wears The Crown (Week One)</h4>
@@ -256,7 +267,7 @@
 							<section aria-labelledby="primary-5">
 								<h5 id="primary-5">Primary Texts</h5>
 
-								<p>Coverley, Louise Bennett. “<a href="https://www.best-poems.net/louise-bennett-coverley/colonization-in-reverse.html">Colonization in Reverse</a>.” <em>Best Poems</em>, 1966.</p>
+								<p>Bennett-Coverley, Louise. “<a href="https://www.best-poems.net/louise-bennett-coverley/colonization-in-reverse.html">Colonization in Reverse</a>.” <em>Best Poems</em>, 1966.</p>
 
 								<p>McKay, Claude. <a href="https://scalar.lehigh.edu/mckay/songs-of-jamaica-1912"><em>Songs of Jamaica</em></a>. Edited by Amardeep Singh, A Digital Collection, Lehigh University, 1912.</p>
 							</section>
@@ -264,9 +275,9 @@
 							<section aria-labelledby="secondary-5">
 								<h5 id="secondary-5">Seconary Texts</h5>
 
-								<p>Cooper, Carolyn. “From ‘centre’ to ‘Margin’: Turning History Upside Down.” <em>Noises in the Blood :Orality, Gender, and the “Vulgar” Body of Jamaican Popular Culture</em>, Duke UP, 1995, pp. 174–98.</p>
+								<p>Bennett-Coverley, Louise. <em>Colonization in Reverse</em>. Island Records, 1983.</p>
 
-								<p>Coverley, Louise Bennett. <em>Colonization in Reverse</em>. Island Records, 1983.</p>
+								<p>Cooper, Carolyn. “From ‘centre’ to ‘Margin’: Turning History Upside Down.” <em>Noises in the Blood :Orality, Gender, and the “Vulgar” Body of Jamaican Popular Culture</em>, Duke UP, 1995, pp. 174–98.</p>
 
 								<p>Greene, Roland, et al. “Dialect Poetry.” <em>The Princeton Encyclopedia of Poetry and Poetics: Fourth Edition</em>, Princeton UP, 2012, pp. 355–56.</p>
 
@@ -308,6 +319,14 @@
 			<button onclick="topFunction()" ontouchend="topFunction()" id="topButton" aria-label="Scroll to top" title="Scroll to top" tabindex="0">Top</button>
 		</div>
 		
+		<style>
+			.content main aside.bennett-coverley{
+				text-align: center;
+			}
+			.content main aside.bennett-coverley div{
+				display: inline-block;
+			}
+		</style>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Serif:wght@400;700&family=Source+Sans+Pro:wght@400;600;700&display=swap"/>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
 		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
