--- a/html/about.html
+++ b/html/about.html
@@ -53,22 +53,22 @@
 
 				<section aria-labelledby="organizers">
 					<h2 id="organizers">Founding Organizers</h2>
-					<div><a href="/html/about/founding_organizers.html"><img loading="" src="/img/about/tiles/uvc_0024.jpg" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/founding_organizers.html"><img loading=""	src="/img/about/tiles/uvc_0025-1324px.jpg" srcset="/img/about/tiles/uvc_0025-1324px.jpg 1324w, /img/about/tiles/uvc_0025-1136px.jpg 1136w, /img/about/tiles/uvc_0025-930px.jpg 930w, /img/about/tiles/uvc_0025-814px.jpg 814w, /img/about/tiles/uvc_0025-662px.jpg 662w, /img/about/tiles/uvc_0025-568px.jpg 568w, /img/about/tiles/uvc_0025-530px.jpg 530w, /img/about/tiles/uvc_0025-465px.jpg 465w, /img/about/tiles/uvc_0025-407px.jpg 407w, /img/about/tiles/uvc_0025-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Intricate, multi-layer, square pattern with beige, blue, purple, green, and red elements." title="Jones, Owen. “Persian No. 1.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, p. Plate XLIV, https://archive.org/details/grammarornament00Jone.Public domain."/></a></div>
 				</section>
 
 				<section aria-labelledby="contributors">
 					<h2 id="contributors">Project Contributors</h2>
-					<div><a href="/html/about/project_contributors.html"><img loading="" src="/img/about/tiles/uvc_0022.jpg" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/project_contributors.html"><img loading="" src="/img/about/tiles/uvc_0023-814px.jpg" srcset="/img/about/tiles/uvc_0023-814px.jpg 814w, /img/about/tiles/uvc_0023-662px.jpg 662w, /img/about/tiles/uvc_0023-568px.jpg 568w, /img/about/tiles/uvc_0023-530px.jpg 530w, /img/about/tiles/uvc_0023-465px.jpg 465w, /img/about/tiles/uvc_0023-407px.jpg 407w, /img/about/tiles/uvc_0023-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Complex flower array with red, blue, white, pink, purple, and yellow flowers." title="Jones, Owen. “Indian No. 4.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, p. Plate LII, https://archive.org/details/grammarornament00Jone. Public domain."/></a></div>
 				</section>
 
 				<section aria-labelledby="faq">
 					<h2 id="faq">Frequently Asked Questions</h2>
-					<div><a href="/html/about/faq.html"><img loading="" src="/img/about/tiles/uvc_0023.jpg" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/faq.html"><img loading="" src="/img/about/tiles/uvc_0024-1324px.jpg" srcset="/img/about/tiles/uvc_0024-1324px.jpg 1324w, /img/about/tiles/uvc_0024-1136px.jpg 1136w, /img/about/tiles/uvc_0024-930px.jpg 930w, /img/about/tiles/uvc_0024-814px.jpg 814w, /img/about/tiles/uvc_0024-662px.jpg 662w, /img/about/tiles/uvc_0024-568px.jpg 568w, /img/about/tiles/uvc_0024-530px.jpg 530w, /img/about/tiles/uvc_0024-465px.jpg 465w, /img/about/tiles/uvc_0024-407px.jpg 407w, /img/about/tiles/uvc_0024-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Complex flower array with red, pink, white, yellow, blue, and purple flowers." title="Jones, Owen. “Indian No. 6.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, p. Plate LIV, https://archive.org/details/grammarornament00Jone. Public Domain."/></a></div>
 				</section>
 
 				<section aria-labelledby="bibliography">
 					<h2 id="bibliography">Bibliography</h2>
-					<div><a href="/html/about/bibliography.html"><img loading="" src="/img/about/tiles/uvc_0021.jpg" srcset="" sizes="" alt="" title=""/></a></div>
+					<div><a href="/html/about/bibliography.html"><img loading="" src="/img/about/tiles/uvc_0022-1136px.jpg" srcset="/img/about/tiles/uvc_0022-1136px.jpg 1136w, /img/about/tiles/uvc_0022-930px.jpg 930w, /img/about/tiles/uvc_0022-814px.jpg 814w, /img/about/tiles/uvc_0022-662px.jpg 662w, /img/about/tiles/uvc_0022-568px.jpg 568w, /img/about/tiles/uvc_0022-530px.jpg 530w, /img/about/tiles/uvc_0022-465px.jpg 465w, /img/about/tiles/uvc_0022-407px.jpg 407w, /img/about/tiles/uvc_0022-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Intricate, multi-layer, diamond pattern with multiple embedded shapes of black, beige, red, and blue." title="Jones, Owen. “Byzantine No. 3.” The Grammar of Ornament, Day and Son, Lithographers to the Queen, 1856, p. Plate XXX, https://archive.org/details/grammarornament00Jone. Public domain."/></a></div>
 				</section>
 			</main>
 			
