--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -57,10 +57,13 @@
 							<li><strong>Michelle Prain Brice</strong> (Universidad Adolfo Ibañez; Pontificia Universidad Católica de Valparaíso)</li>
 							<li><strong>Jenée Crayne</strong> (Notre Dame de Namur University)</li>
 							<li><strong>Melissa Free</strong> (Arizona State University)</li>
+							<li><strong>Elaine Freedgood</strong> (New York University)</li>
 							<li><strong>Jennifer Hayward</strong> (College of Wooster)</li>
+							<li><strong>Priyanka Anne Jacob</strong> (Loyola University Chicago)</li>
 							<li><strong>Heidi Kaufman</strong> (University of Oregon)</li>
 							<li><strong>Cherrie Kwok</strong> (University of Virginia)</li>
 							<li><strong>Ji Eun Lee</strong> (Sungkyunkwan University)</li>
+							<li><strong>Margaret Linley</strong> (Simon Fraser University)</li>
 							<li><strong>Tricia Lootens</strong> (University of Georgia)</li>
 							<li><strong>Indu Ohri</strong> (University of Virginia)</li>
 							<li><strong>Jessie Reeder</strong> (Binghamton University)</li>
