--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -47,8 +47,8 @@
 					<h2 id="level-2-title"><i class="fa fa-book fa-fw" aria-hidden="true"></i> Lesson Plans</h2>
 				</section>
 
-				<section aria-labelledby="introduction">
-					<h2 id="introduction">Introduction</h2>
+				<section aria-labelledby="overview">
+					<h2 id="overview">Overview</h2>
 					<p>These lesson plans are organized around specific themes ("pathways") and aim to provide instructors with recommended texts (primary and secondary), critical questions, and pedagogical approaches that can be used in the classroom. We view these lesson plans as sources of inspiration that help us reimagine Victorian studies with our students, as we continue to undiscipline ourselves and our field.</p>
 				</section>
 
