--- a/html/about.html
+++ b/html/about.html
@@ -46,8 +46,8 @@
 					<h2 id="level-2-title"><i class="fa fa-book fa-fw" aria-hidden="true"></i> About</h2>
 				</section>
 
-				<section aria-labelledby="introduction">
-					<h2 id="introduction">Introduction</h2>
+				<section aria-labelledby="overview">
+					<h2 id="overview">Overview</h2>
 					<p>The pages in this section complement those elsewhere found on the site and will evolve as the project evolves. As present, the section introduces the project organizers, acknowledges the work of our contributors, provides insight into the critical thinking that informs the project, and gather in one place the various primary and secondary materials cited throughout the site.</p>
 				</section>
 
