--- a/html/lesson_plans/africa_dramatic_monologue.html
+++ b/html/lesson_plans/africa_dramatic_monologue.html
@@ -275,7 +275,7 @@
 							<section aria-labelledby="secondary-5">
 								<h5 id="secondary-5">Seconary Texts</h5>
 
-								<p>Bennett-Coverley, Louise. <em>Colonization in Reverse</em>. Island Records, 1983.</p>
+								<p>Bennett-Coverley, Louise. <a href="https://writing.upenn.edu/pennsound/x/Bennett.php"><em>Colonization in Reverse</em></a>. Island Records, 1983. Audio recording.</p>
 
 								<p>Cooper, Carolyn. “From ‘centre’ to ‘Margin’: Turning History Upside Down.” <em>Noises in the Blood :Orality, Gender, and the “Vulgar” Body of Jamaican Popular Culture</em>, Duke UP, 1995, pp. 174–98.</p>
 
