--- a/html/zoomcasts/hayward-reeder-brice.html
+++ b/html/zoomcasts/hayward-reeder-brice.html
@@ -62,11 +62,21 @@
 					<p><strong>Date:</strong> February 25, 2021</p>
 					<p><strong>Length:</strong> 35:39</p>
 					<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
-					<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-02-25-Hayward-et-al-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-02-25-Hayward-et-al-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+					<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-02-25-Hayward-et-al-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-02-25-Hayward-et-al-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+				</section>
+
+				<section class="menu-container" aria-labelledby="menu">
+					<h3 id="Menu">Menu</h3>
+					<ol class="menu">
+						<li><a href="#overview">Zoomcast Overview</a></li>
+						<li><a href="#series">Positionality Series</a></li>
+						<li><a href="#biography">Developer Biography</a></li>
+						<li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
+					</ol>
 				</section>
 
 				<summary aria-labelledby="overview">
-					<h3 id="overview">Overview</h3>
+					<h3 id="overview">Zoomcast Overview</h3>
 					<p>Ryan Fong speaks with Jennifer Hayward, Jessie Reeder and Michelle Prain Brice, the three creators of <a href="http://anglophonechile.org/">Anglophone Chile</a>. They discuss not only what it means to bring Chile, specifically, and Latin America, more generally, into their purview as Victorianists, but also talk about how print culture forms a crucial archive for understanding these places and their role in Britain’s “informal empire.”  Hayward, Reeder, and Brice also share the work they have done in digitizing newspapers and periodicals for their website as well as in writing the short essays provided to help instructors place these print materials in appropriate contexts.</p>
 				</summary>
 
