--- a/html/zoomcasts/lootens.html
+++ b/html/zoomcasts/lootens.html
@@ -62,11 +62,21 @@
 						<p><strong>Date:</strong> January 29, 2021</p>
 						<p><strong>Length:</strong> 31:31</p>
 						<p><strong>Zoomcast Series:</strong> Positionality</p>
-						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-01-29-Lootens-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-01-29-Lootens-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-01-29-Lootens-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-01-29-Lootens-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 					</section>
 
+					<section class="menu-container" aria-labelledby="menu">
+						<h3 id="Menu">Menu</h3>
+            <ol class="menu">
+              <li><a href="#overview">Zoomcast Overview</a></li>
+							<li><a href="#series">Positionality Series</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
+            </ol>
+          </section>
+
 					<summary aria-labelledby="overview">
-						<h3 id="overview">Overview</h3>
+						<h3 id="overview">Zoomcast Overview</h3>
 						<p>Chaozon Bauer interviews Tricia Lootens, Josiah Meigs Distinguished Teaching Professor of English at the University of Georgia. In 2005, Lootens’ questionings of longstanding practices of “writing Victorian Studies white,” which would eventually shape her Transatlantic <em>Political Poetess</em> (2017), began extending to engagements with the writing and reception of Indian poet, translator, critic, and novelist Toru Dutt. A member of the national Historical Poetics Working Group, Lootens was co-organizer, with Brigitte Fielder, Ryan Fong, and Jason Rudy, of the Summer 2020 virtual Dickens Universe Conference, which gathered African-Americanists and nineteenth-century British literature specialists to reflect on the critical pairing of Charles Dickens’s <em>David Copperfield</em> with Frances E. W. Harper’s <em>Iola Leroy</em>, a process planned to continue, if possible, in-person, in Summer 2022. In this zoomcast interview, we address Tricia's academic journey, how our students inform our changing pedagogies, and raise a few thoughts about trying to negotiate relations to the precarity of higher education, particularly as it affects our most structurally-vulnerable colleagues.</p>
 					</summary>
 
