--- a/html/zoomcasts/rudy.html
+++ b/html/zoomcasts/rudy.html
@@ -62,11 +62,22 @@
 						<p><strong>Date:</strong> February 4, 2021</p>
 						<p><strong>Length:</strong> 40:50</p>
 						<p><strong>Zoomcast Series:</strong> Beyond the Literary</p>
-						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-02-04-Rudy-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-02-04-Rudy-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-02-04-Rudy-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-02-04-Rudy-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 					</section>
 
+					<section class="menu-container" aria-labelledby="menu">
+						<h3 id="Menu">Menu</h3>
+            <ol class="menu">
+              <li><a href="#overview">Zoomcast Overview</a></li>
+							<li><a href="#series">Positionality Series</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+							<li><a href="#reading">Further Reading</a></li>
+              <li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
+            </ol>
+          </section>
+
 					<summary aria-labelledby="overview">
-						<h3 id="overview">Overview</h3>
+						<h3 id="overview">Zoomcast Overview</h3>
 						<p>Ryan Fong interviews Jason Rudy, Professor of English at the University of Maryland, College Park. In their conversation, they discuss how each of them came to study nineteenth-century Australia and to do so through an Indigenous-centered lens. They focus on the importance of visual art in the aesthetic traditions of many Aboriginal communities across Australia, both within the nineteenth century and in contemporary contexts.  By showing how visual works function as both archival records and interventions into colonial accounts of history, Rudy and Fong talk about they have incorporated these materials into their teaching.  Rudy also discusses the impact that his relationship with Indigenous artist Gordon Syron has had on his thinking, research, and teaching, especially as Rudy has worked with Syron on writing the artist’s biography.</p>
 					</summary>
 					
