--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -62,11 +62,21 @@
 						<p><strong>Date:</strong> March 17, 2021</p>
 						<p><strong>Length:</strong> 30:36</p>
 						<p><strong>Zoomcast Series:</strong> Positionality</p>
-						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/2021-03-17-Aslami-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/2021-03-17-Aslami-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-03-17-Aslami-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-03-17-Aslami-transcript.docx"  title="This link opens a Word document.">Word</a></p>
 					</section>
+
+					<section class="menu-container" aria-labelledby="menu">
+						<h3 id="Menu">Menu</h3>
+            <ol class="menu">
+              <li><a href="#overview">Zoomcast Overview</a></li>
+							<li><a href="#series">Positionality Series</a></li>
+							<li><a href="#biography">Developer Biography</a></li>
+              <li><a href="#citation">Page/Zoomcast Citation (MLA)</a></li>
+            </ol>
+          </section>
 					
 					<summary aria-labelledby="overview">
-						<h3 id="overview">Overview</h3>
+						<h3 id="overview">Zoomcast Overview</h3>
 						<p>Chaozon Bauer interviews Zarena Aslami, Associate Professor of of 19th-Century British Litearture and Culture at Michigan State University.  Their conversation focuses around the importance of collaboration with regard to research projects, and, more importantly, on how best to support and serve not only their students but colleagues as well.  Aslami begins by sharing her experience as an insider/outsider, as a half-white and half-Afghan woman, and how this inside/outside perspective drew her to Victorian studies.  Chaozon Bauer and Aslami also discuss the ways in which some graduate programs are redesigning curriculum to include classes that center on questions of race (at Michigan State, for example, graduate students will soon be required to take a "Race, Gender and the Human" course), and the importance of collaborating on such initiatives with colleagues in and outside of their field as well as with undergraduate and graduate students, all of whom share the same vision for a more antiracist future for higher education.</p>
 					</summary>
 
