--- a/html/lesson_plans/seacole_undisciplining_autobiography.html
+++ b/html/lesson_plans/seacole_undisciplining_autobiography.html
@@ -54,7 +54,7 @@
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Indu Ohri, Breanna Simpson</p>
             
-            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
