--- a/html/lesson_plans/african_ethiopianism.html
+++ b/html/lesson_plans/african_ethiopianism.html
@@ -54,7 +54,7 @@
 
             <p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Cherrie Kwok, Ji Eun Lee</p>
             
-            <p><strong>Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
 					</section>
@@ -135,7 +135,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html">https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html</a>.</p>
+						<p>Melissa Free, lesson plan dev. “Ethiopianism.” Carolyn Betensky, Cherrie Kwok, Ji Eun Lee, collab. peer revs.; Sophia Hsu, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html">https://undiscipliningvc.org/html/lesson_plans/ethiopianism.html</a>.</p>
 					</section>
 			</main>
 			
