--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -50,7 +50,7 @@
 					<section class="cluster-details" aria-labelledby="details">
 						<h3 id="details">Cluster Production Details</h3>
 
-						<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
           	<p><strong>Lesson Plan Developers:</strong>  Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 
