--- a/html/lesson_plans/seacole_recentering_nursing.html
+++ b/html/lesson_plans/seacole_recentering_nursing.html
@@ -54,7 +54,7 @@
 
             <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Breanna Simpson</p>
             
-            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+            <p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
             <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
@@ -235,7 +235,7 @@
 
 					<section aria-labelledby="citation">
 						<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-						<p>Indu Ohri, lesson plan dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
+						<p>Indu Ohri, lesson plan dev. “Recentering Nursing in Wartime.” Kira Braham, Heidi Kaufman, Breanna Simpson, collab. peer revs.; Adrian S. Wisnicki, lesson plan cluster dev. <em>Undisciplining the Victorian Classroom</em>, 2021, <a href="https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html">https://undiscipliningvc.org/html/lesson_plans/seacole_recentering_nursing.html</a>.</p>
 					</section>
 			</main>
 			
