update seacole for aspect-ratio-box

--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -42,10 +42,12 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Mary Seacole and the Caribbean</h2>
+			<main id="main" aria-labelledby="lesson-plan">		
 
-          <img width="100%" height="400px" style="background: #e6e6e6;"/>
+					<div class="aspect-ratio-box">
+						<h2 id="lesson-plan">Mary Seacole and the Caribbean</h2>
+          	<img src="/img/lesson_plans/uvc_0008.jpg" style="background: #e6e6e6;"/>
+					</div>
 					
 					<section class="cluster-details" aria-labelledby="details">
 						<h3 id="details">Cluster Production Details</h3>
