--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8"/>
     <title>Reintroducing the Victorians | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content=""/>
+		<meta name="description" content="Resituates Victorian literature in our present moment by teaching it through a polyphonic, global, and intersectional lens, attentive to power differentials."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#395375"/>
