--- a/html/zoomcasts/aslami.html
+++ b/html/zoomcasts/aslami.html
@@ -56,17 +56,19 @@
 						</div>
 					</div>
 
-					<section aria-labelledby="zoomcast-production-details">
-						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>				
-						<p id="text"><strong>Speakers:</strong> Zarena Aslami (guest), Pearl Chaozon Bauer (host)</p>
-						<p><strong>Date:</strong> March 17, 2021</p>
-						<p><strong>Length:</strong> 30:36</p>
-						<p><strong>Zoomcast Series:</strong> Positionality</p>
-						<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-03-17-Aslami-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-03-17-Aslami-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+					<section class="specs" aria-labelledby="zoomcast-production-details">
+						<h3 id="zoomcast-production-details">Zoomcast Production Details</h3>
+						<div class="specs-container">			
+							<p id="text"><strong>Speakers:</strong> Zarena Aslami (guest), Pearl Chaozon Bauer (host)</p>
+							<p><strong>Date:</strong> March 17, 2021</p>
+							<p><strong>Length:</strong> 30:36</p>
+							<p><strong>Zoomcast Series:</strong> Positionality</p>
+							<p><strong>Full Zoomcast Transcript (Download):</strong> &nbsp;<a href="/pdf/zoomcasts/2021-03-17-Aslami-transcript.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/zoomcasts/2021-03-17-Aslami-transcript.docx"  title="This link opens a Word document.">Word</a></p>
+						</div>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
-						<h3 id="Menu">Menu</h3>
+						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <li><a href="#overview">Zoomcast Overview</a></li>
 							<li><a href="#series">Positionality Series</a></li>
