--- a/html/syllabi/reintroducing_victorians.html
+++ b/html/syllabi/reintroducing_victorians.html
@@ -42,28 +42,31 @@
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Reintroducing the Victorians</h2>
+			<main id="main" aria-labelledby="syllabus">
+					<div class="aspect-ratio-box">
+						<h2 id="syllabus">Reintroducing the Victorians</h2>
+          	<img loading="" src="/img/syllabi/uvc_0026-18500px.jpg" srcset="/img/syllabi/uvc_0026-1500px.jpg 1500w, /img/syllabi/uvc_0026-1350px.jpg 1350w, /img/syllabi/uvc_0026-1200px.jpg 1200w, /img/syllabi/uvc_0026-1050px.jpg 1050w, /img/syllabi/uvc_0026-900px.jpg 900w, /img/syllabi/uvc_0026-750px.jpg 750w, /img/syllabi/uvc_0026-600px.jpg 600w, /img/syllabi/uvc_0026-450px.jpg 450w, /img/syllabi/uvc_0026-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Interior scene with a large group of women seated around a table, many looking at documents." title="Anonymous. “In the Ayah’s Home (Hackney).” Living London: Its Work and Its Play, Its Humour and Its Pathos, Its Sights and Its Scenes, edited by G. R. Sims, Cassell & Co, 1904. British Library, General Reference Collection 10349.h.12., https://www.bl.uk/collection-items/photograph-of-the-interior-of-the-ayahs-home-in-hackney. Public domain."/>
+					</div>
 
-          <img width="100%" height="400px" style="background: #e6e6e6;"/>
-
-					<section aria-labelledby="syllabus-specs">
+					<section class="specs" aria-labelledby="syllabus-specs">
 						<h3 id="syllabus-specs">Syllabus Production Details</h3>
 
-            <p><strong>Developer:</strong> Priyanka Anne Jacob <a href="mailto:pjacob@luc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<div class="specs-container">
+							<p><strong>Developer:</strong> Priyanka Anne Jacob <a href="mailto:pjacob@luc.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Peer Reviewer:</strong> Elaine Freedgood</p>
-            
-            <p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Peer Reviewer:</strong> Elaine Freedgood</p>
+							
+							<p><strong>Syllabus Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
+							<p><strong>Cluster Title:</strong> Recontextualizing the Victorians</p>
 
-						<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/jacob_reintroducing_victorians.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/jacob_reintroducing_victorians.docx"  title="This link opens a Word document.">Word</a></p>
+							<p><strong>Peer-Reviewed Syllabus (Download):</strong> &nbsp;<a href="/pdf/syllabi/jacob_reintroducing_victorians.pdf" title="This link opens a PDF document.">PDF</a> &nbsp;|&nbsp; <a href="/pdf/syllabi/jacob_reintroducing_victorians.docx"  title="This link opens a Word document.">Word</a></p>
+						</div>
 					</section>
 
 
 					<section class="menu-container" aria-labelledby="menu">
-						<h3 id="Menu">Menu</h3>
+						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <li><a href="#overview">Syllabus Overview</a></li>
 							<li><a href="#works-cited">Works Cited</a></li>
