update seacole pages

--- a/html/lesson_plans/seacole_decentering_britishness.html
+++ b/html/lesson_plans/seacole_decentering_britishness.html
@@ -43,26 +43,29 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Decentering Britishness</h2>
+					<div class="aspect-ratio-box">
+						<h2 id="lesson-plan">Decentering Britishness</h2>
+          	<img loading="" style="object-position: 50% 65%;" src="/img/lesson_plans/uvc_0013-900px.jpg" srcset="/img/lesson_plans/uvc_0013-900px.jpg 900w, /img/lesson_plans/uvc_0013-750px.jpg 750w, /img/lesson_plans/uvc_0013-600px.jpg 600w, /img/lesson_plans/uvc_0013-450px.jpg 450w, /img/lesson_plans/uvc_0013-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Market scene with sellers seated before baskets, and many individuals in bright white clothing milling about." title="Anonymous. Jubilee Market, Kingston, Jamaica. ca. 1890s, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain."/>
+					</div>
 
-          <img width="100%" height="300px" style="background: #e6e6e6;"/>
-
-          <section aria-labelledby="lesson-plan-specs">
+          <section class="specs" aria-labelledby="lesson-plan-specs">
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<div class="specs-container">
+							<p><strong>Developer:</strong> Kira Braham <a href="mailto:kira.braham@vanderbilt.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
-            
-            <p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Collaborating Peer Reviewers:</strong> Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
+							
+							<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
+							<p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
-            <p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
+							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
+						</div>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
-						<h3 id="Menu">Menu</h3>
+						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
@@ -148,7 +151,7 @@
 
 							<p>Punch Magazine. 1856. “<a href="https://www.victorianlondon.org/people/seacole.htm">A Stir for Seacole</a>.” Poem.</p>
 
-							<p>Seacole, Mary. 2005. <em>Mrs. Seacole’s Wonderful Adventures in Many Lands</em>. Edited by Sarah Salih. New York City: Penguin Books.</p>
+							<p>Seacole, Mary. 2005. <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em>. Edited by Sarah Salih. New York City: Penguin Books.</p>
             </section>
 
             <section aria-labelledby="materials-2">
