--- a/html/lesson_plans/seacole_caribbean_introduction.html
+++ b/html/lesson_plans/seacole_caribbean_introduction.html
@@ -46,24 +46,26 @@
 
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Mary Seacole and the Caribbean</h2>
-          	<img src="/img/lesson_plans/uvc_0008.jpg" style="background: #e6e6e6;"/>
+          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0008-900px.jpg" srcset="/img/lesson_plans/uvc_0008-900px.jpg 900w, /img/lesson_plans/uvc_0008-750px.jpg 750w, /img/lesson_plans/uvc_0008-600px.jpg 600w, /img/lesson_plans/uvc_0008-450px.jpg 450w, /img/lesson_plans/uvc_0008-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background." title="Anonymous. Kingston from Harbor. 1891, https://monovisions.com/vintage-everyday-life-in-jamaica-1890s/. Public domain."/>
 					</div>
 					
-					<section class="cluster-details" aria-labelledby="details">
-						<h3 id="details">Cluster Production Details</h3>
+					<section class="cluster-details specs" aria-labelledby="details">
+						<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
-						<p><strong>Lesson Plan Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<div class="specs-container">
+							<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-          	<p><strong>Lesson Plan Developers:</strong>  Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
+							<p><strong>Lesson Plan Developers:</strong>  Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p>
 
-						<div>
-							<strong>Lesson Plan Pages:</strong> 
-							<ol>
-								<li><a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a></li>
-								<li><a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a></li>
-								<li><a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a></li>
-								<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
-							</ol>
+							<div>
+								<strong>Lesson Plan Pages:</strong> 
+								<ol>
+									<li><a href="/html/lesson_plans/seacole_decentering_britishness.html">Decentering Britishness</a></li>
+									<li><a href="/html/lesson_plans/seacole_undisciplining_autobiography.html">Undisciplining Victorian Autobiography</a></li>
+									<li><a href="/html/lesson_plans/seacole_recentering_nursing.html">Recentering Nursing in Wartime</a></li>
+									<li><a href="/html/lesson_plans/seacole_decolonizing_heathcare.html">Decolonizing Health(care)</a></li>
+								</ol>
+							</div>
 						</div>
 					</section>
 
@@ -74,7 +76,7 @@
 					</aside>
 
 					<section aria-labelledby="introduction">
-						<h3 id="introudction">Introduction</h3>
+						<h3 id="introduction">Introduction</h3>
 
 						<p>In the fall of 2020, the present set of scholars first came together as part of the <em>Undisciplining the Classroom</em> (UVC) project. Our goal was to develop a set of anti-racist teaching materials that focused on the Caribbean. Four of us (Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson) shared an interest in Caribbean studies and had used a variety of approaches for teaching Caribbean literature and culture in our classrooms. The fifth (Adrian S. Wisnicki) joined the group on behalf of the main UVC co-organizers, but strategically chose to work outside his main areas of expertise (African studies; postcolonial studies; technology and culture) in order to serve as group facilitator. After consultation, we decided to build a model set of “undisciplined” lesson plans focused on Mary Seacole, the author of <em>Wonderful Adventures of Mrs. Seacole in Many Lands</em> (1857).</p>
 
