--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -43,24 +43,27 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Slavery and Victorian Theories of Sexuality, Desire, and the Family</h2>
+					<div class="aspect-ratio-box">
+						<h2 class="bottom" id="lesson-plan">Slavery and Victorian Theories of Sexuality, Desire, and the Family</h2>
+          	<img loading="" style="object-position: 50% 60%;" src="/img/lesson_plans/uvc_0014-1500px.jpg" srcset="/img/lesson_plans/uvc_0014-1500px.jpg 1500w, /img/lesson_plans/uvc_0014-1350px.jpg 1350w, /img/lesson_plans/uvc_0014-1200px.jpg 1200w, /img/lesson_plans/uvc_0014-1050px.jpg 1050w, /img/lesson_plans/uvc_0014-900px.jpg 900w, /img/lesson_plans/uvc_0014-750px.jpg 750w, /img/lesson_plans/uvc_0014-600px.jpg 600w, /img/lesson_plans/uvc_0014-450px.jpg 450w, /img/lesson_plans/uvc_0014-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Woman jumping from bridge into water surrounded by men with arms outstretched to catch and stop her." title="Anonymous. “The Death of Clotel.” Clotelle; or, The Colored Heroine: A Tale of the Southern States, by William Wells Brown, Lee & Shepard, 1867, frontispiece, https://babel.hathitrust.org/cgi/pt?id=uc2.ark:/13960/t4kk94s0d&view=1up&seq=8. Public domain."/>
+					</div>
 
-          <img width="100%" height="300px" style="background: #e6e6e6;"/>
-
-          <section aria-labelledby="lesson-plan-specs">
+          <section class="specs" aria-labelledby="lesson-plan-specs">
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Developer:</strong> Carolyn Betensky <a href="mailto:betensky@uri.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<div class="specs-container">
+							<p><strong>Developer:</strong> Carolyn Betensky <a href="mailto:betensky@uri.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Collaborating Peer Reviewers:</strong> Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
-            
-            <p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Collaborating Peer Reviewers:</strong> Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
+							
+							<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
+							<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
+						</div>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
-						<h3 id="Menu">Menu</h3>
+						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <li><a href="#goals">Goals, Questions, and Usage</a>
 								<ol>
@@ -89,7 +92,7 @@
 							<p>This lesson plan is designed as a unit for one week in an M.A./Ph.D.-level course in Victorian sexuality, love, gender, and/or family. Its central question is: How does foregrounding the experience of enslavement contribute to existing conversations in Victorian studies about sexuality, desire, and the family?</p>
             </section>	
 
-						<section aria-labelledby="organization">
+						<section aria-labelledby="framing">
               <h4 id="framing">Critical Framing</h4>
 
 							<p>Since the first volume of Michel Foucault’s <em>History of Sexuality</em> came out in English translation (and, to some degree, since the publication some twenty years earlier of Steven Marcus’s <em>Other Victorians</em>), scholars have engaged in a broad project of reexamining what sex and sexuality meant to the Victorians. From the debunking of the “repressive hypothesis” and identification of different discourses of sexuality that incited Victorian subjects to speak of sex, Foucault set the stage, on the one hand, for many illuminating studies that have allowed us to think differently about sex, the family, and desire in the period—and about how we cannot neglect to consider the roles that our twenty-first-century perspectives play in shaping our understanding of the past. Marcus’s study, on the other hand, exposed a vast trove of Victorian pornographic texts that gave the lie to notions of Victorian textual priggishness, suggesting that even the idea of a nineteenth-century vocabulary purge requires a reevaluation. Subsequent studies of queer and transgender Victorians, alternative Victorian families and family relations, and transgressive and surprisingly bourgeois households have proliferated and constitute some of the most engaged and engaging scholarship in the field.</p>
