--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -43,27 +43,30 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Africa, Diaspora, and the British Empire</h2>
-
-          <img width="100%" height="400px" style="background: #e6e6e6;"/>
+					<div class="aspect-ratio-box">
+						<h2 id="lesson-plan">Africa, Diaspora, and the British Empire</h2>
+          	<img loading="" src="/img/lesson_plans/uvc_0007-1800px.jpg" srcset="/img/lesson_plans/uvc_0007-1800px.jpg 1800w, /img/lesson_plans/uvc_0007-1650px.jpg 1650w, /img/lesson_plans/uvc_0007-1500px.jpg 1500w, /img/lesson_plans/uvc_0007-1350px.jpg 1350w, /img/lesson_plans/uvc_0007-1200px.jpg 1200w, /img/lesson_plans/uvc_0007-1050px.jpg 1050w, /img/lesson_plans/uvc_0007-900px.jpg 900w, /img/lesson_plans/uvc_0007-750px.jpg 750w, /img/lesson_plans/uvc_0007-600px.jpg 600w, /img/lesson_plans/uvc_0007-450px.jpg 450w, /img/lesson_plans/uvc_0007-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="White cloth wrapper with brownish black stamped patterns in thirty-five rectangular panels." title="Asante artist. Wrapper. Mid-late 19th century, https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0. Textile and Fiber Arts, Smithsonian National Musem of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act."/>
+					</div>
 					
-					<section class="cluster-details" aria-labelledby="details">
-						<h3 id="details">Cluster Production Details</h3>
+					<section class="cluster-details specs" aria-labelledby="details">
+						<h3 id="details">Lesson Plan Cluster Production Details</h3>
 
-						<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<div class="specs-container">
+							<p><strong>Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-          	<p><strong>Lesson Plan Developers:</strong>  Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
+							<p><strong>Lesson Plan Developers:</strong>  Carolyn Betensky, Melissa Free, Cherrie Kwok, Ji Eun Lee</p>
 
-						<div>
-							<strong>Lesson Plan Pages:</strong> 
-							<ol>
-								<li><a href="">Undisciplining the Dramatic Monologue</a></li>
-								<li><a href="">Colonial Landscapes and Travel Narratives</a></li>
-								<li><a href="">Southern Africa, 1825-1930</a></li>
-								<li><a href="">Ethiopianism</a></li>
-								<li><a href="">Archival Erasure and the Aftermath of Slavery</a></li>
-								<li><a href="">Slavery and Theories of Sexuality, Desire, and Family</a></li>
-							</ol>
+							<div>
+								<strong>Lesson Plan Pages:</strong> 
+								<ol>
+									<li><a href="">Undisciplining the Dramatic Monologue</a></li>
+									<li><a href="">Colonial Landscapes and Travel Narratives</a></li>
+									<li><a href="">Southern Africa, 1825-1930</a></li>
+									<li><a href="">Ethiopianism</a></li>
+									<li><a href="">Archival Erasure and the Aftermath of Slavery</a></li>
+									<li><a href="">Slavery and Theories of Sexuality, Desire, and Family</a></li>
+								</ol>
+							</div>
 						</div>
 					</section>
 
@@ -74,7 +77,7 @@
 					</aside>
 
 					<section aria-labelledby="introduction">
-						<h3 id="introudction">Introduction</h3>
+						<h3 id="introduction">Introduction</h3>
 						<p>We are five Victorian studies scholars from different backgrounds and institutions at various stages of our careers. Inspired by Christina Sharpe’s call and that of Ronjaunee Chatterjee, Alicia Mireles Christoff, and Amy R. Wong, we come together with the common goal of undisciplining ourselves. This is a process that is very much in progress and that—for us and, we believe, for Victorian studies writ large—is and must be facilitated through shared experience. Our collaboration and the open, supportive conversations we have had while building these lesson plans have been crucial as we learn and unlearn from each other and scholars from other disciplines, including Black, African, and Postcolonial Studies.</p>
 
 						<p>Our lesson plans focus primarily on Africa, the African diaspora, and the British empire in the long nineteenth century. Though we were originally tasked with thinking about nineteenth-century Africa, we realized that, given the expansive reach of the empire, we neither could nor should consider the continent in isolation. We understand that our lesson plans are not comprehensive. We hope, however, that our suggested topics, texts, and theoretical paradigms encourage other educators to reevaluate their own pedagogical practices, as our field continues to confront the insidious ways that persistent implicit racial bias has structured what we know, what we don’t know, and what we don’t know that we don’t know.</p>
