--- a/html/lesson_plans/african_ethiopianism.html
+++ b/html/lesson_plans/african_ethiopianism.html
@@ -43,29 +43,31 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Ethiopianism</h2>
+					<div class="aspect-ratio-box">
+						<h2 id="lesson-plan">Ethiopianism</h2>
+          	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0017-900px.jpg" srcset="/img/lesson_plans/uvc_0017-900px.jpg 900w, /img/lesson_plans/uvc_0017-750px.jpg 750w, /img/lesson_plans/uvc_0017-600px.jpg 600w, /img/lesson_plans/uvc_0017-450px.jpg 450w, /img/lesson_plans/uvc_0017-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Boy and man with arm raised standing in water surrounded by crowd of onlookers, some with umbrellas." title="Baptism by John Chilembwe in Liberia or Malawi. ca. 1900-1915, https://www.loc.gov/pictures/item/93505644/. Library of Congress Prints and Photographs Division. No known restrictions on publication"/>
+					</div>
 
-          <img width="100%" height="300px" style="background: #e6e6e6;"/>
-
-          <section aria-labelledby="lesson-plan-specs">
+          <section class="specs" aria-labelledby="lesson-plan-specs">
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Developer:</strong> Melissa Free <a href="mailto:mmfree@asu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+						<div class="specs-container">
+							<p><strong>Developer:</strong> Melissa Free <a href="mailto:mmfree@asu.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Cherrie Kwok, Ji Eun Lee</p>
-            
-            <p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Collaborating Peer Reviewers:</strong> Carolyn Betensky, Cherrie Kwok, Ji Eun Lee</p>
+							
+							<p><strong>Lesson Plan Cluster Developer:</strong> Sophia Hsu <a href="mailto:sophia.hsu@lehman.cuny.edu?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
+							<p><strong>Cluster Title:</strong> Africa, Diaspora, and the British Empire</p>
+						</div>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
-						<h3 id="Menu">Menu</h3>
+						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <li><a href="#goals">Goals, Questions, and Usage</a></li>
               <li><a href="#materials">Organization and Suggested Materials</a>
                 <ol>
-									<li><a href="#organization">Organization</a></li>
                   <li><a href="#materials-1">Primary Materials</a></li>
                   <li><a href="#materials-2">Critical Materials</a></li>
                 </ol>
