--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -36,16 +36,17 @@
 	<!-- Informed throughout by https://w3c.github.io/aria-practices/examples/ -->
 
 	<body class="essay">
-		<div class="text-container content about">
+		<div class="text-container content about contributors">
 
 			<div data-include="nav"></div>
 
 			<header id="header"></header>
 
-			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan">Project Contributors</h2>
-
-          <img width="100%" height="400px" style="background: #e6e6e6;"/>
+			<main id="main" aria-labelledby="contributors">
+					<div class="aspect-ratio-box">
+						<h2 id="contributors">Project Contributors</h2>
+          	<img loading="" src="/img/about/uvc_0025-900px.jpg" srcset="/img/about/uvc_0025-900px.jpg 900w, /img/about/uvc_0025-750px.jpg 750w, /img/about/uvc_0025-600px.jpg 600w, /img/about/uvc_0025-450px.jpg 450w, /img/about/uvc_0025-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+					</div>
 
 					<section>
 						<p>From its inception, <em>Undisciplining the Victorian Classroom</em> has been built through a collaborative process. One of our primary goals with this site is to create a robust community where we can engage with and learn from one another in the effort to transform our field and our classroom practices. The founding organizers are grateful to the many people who have given their time and energy in developing content for the site and are happy to acknowledge their labor and vital contributions here.</p>
