--- a/html/lesson_plans/0_lesson-plan-template-caribbean.html
+++ b/html/lesson_plans/0_lesson-plan-template-caribbean.html
@@ -45,26 +45,29 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="lesson-plan">
-					<h2 id="lesson-plan"></h2><!-- Change -->
+					<div class="aspect-ratio-box">
+						<h2 id="lesson-plan"></h2><!-- Change -->
+          	<img loading="" src="/img/lesson_plans/uvc_000X-1800px.jpg" srcset="/img/lesson_plans/uvc_000X-1800px.jpg 1800w, /img/lesson_plans/uvc_000X-1650px.jpg 1650w, /img/lesson_plans/uvc_000X-1500px.jpg 1500w, /img/lesson_plans/uvc_000X-1350px.jpg 1350w, /img/lesson_plans/uvc_000X-1200px.jpg 1200w, /img/lesson_plans/uvc_000X-1050px.jpg 1050w, /img/lesson_plans/uvc_000X-900px.jpg 900w, /img/lesson_plans/uvc_000X-750px.jpg 750w, /img/lesson_plans/uvc_000X-600px.jpg 600w, /img/lesson_plans/uvc_000X-450px.jpg 450w, /img/lesson_plans/uvc_000X-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="" title=""/>
+					</div>
 
-          <img width="100%" height="300px" style="background: #e6e6e6;"/>
-
-          <section aria-labelledby="lesson-plan-specs">
+          <section class="specs" aria-labelledby="lesson-plan-specs">
 						<h3 id="lesson-plan-specs">Lesson Plan Production Details</h3>
 
-            <p><strong>Developer:</strong>  <a href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p><!-- Change -->
+						<div class="specs-container">
+							<p><strong>Developer:</strong>  <a href="mailto:?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p><!-- Change -->
 
-            <p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p><!-- Change -->
-            
-            <p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
+							<p><strong>Collaborating Peer Reviewers:</strong> Kira Braham, Heidi Kaufman, Indu Ohri, Breanna Simpson</p><!-- Change -->
+							
+							<p><strong>Cluster Developer:</strong> Adrian S. Wisnicki <a href="mailto:awisnicki@yahoo.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true" title="Email"></i></a></p>
 
-            <p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
+							<p><strong>Cluster Title:</strong> Mary Seacole and the Caribbean</p>
 
-            <p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
+							<p><strong>Note:</strong> This page uses the Chicago Author-Date citation format for all textual references. All references also appear in the <a href="html/about/bibliography.html">project bibliograpy</a> using the MLA citation format.</p>
+						</div>
 					</section>
 
 					<section class="menu-container" aria-labelledby="menu">
-						<h3 id="Menu">Menu</h3>
+						<h3 id="menu">Menu</h3>
             <ol class="menu">
               <!-- <li><a href="#lesson-plan-specs">Lesson Plan Production Details</a></li> -->
               <li><a href="#outcomes">Learning Outcomes</a></li>
