add image captions

--- a/html/lesson_plans/africa_diaspora_empire_introduction.html
+++ b/html/lesson_plans/africa_diaspora_empire_introduction.html
@@ -46,6 +46,7 @@
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Africa, Diaspora, and the British Empire</h2>
           	<img loading="" src="/img/lesson_plans/uvc_0007-1800px.jpg" srcset="/img/lesson_plans/uvc_0007-1800px.jpg 1800w, /img/lesson_plans/uvc_0007-1650px.jpg 1650w, /img/lesson_plans/uvc_0007-1500px.jpg 1500w, /img/lesson_plans/uvc_0007-1350px.jpg 1350w, /img/lesson_plans/uvc_0007-1200px.jpg 1200w, /img/lesson_plans/uvc_0007-1050px.jpg 1050w, /img/lesson_plans/uvc_0007-900px.jpg 900w, /img/lesson_plans/uvc_0007-750px.jpg 750w, /img/lesson_plans/uvc_0007-600px.jpg 600w, /img/lesson_plans/uvc_0007-450px.jpg 450w, /img/lesson_plans/uvc_0007-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="White cloth wrapper with brownish black stamped patterns in thirty-five rectangular panels." title="Asante artist. Wrapper. Mid-late 19th century, https://africa.si.edu/collections/objects/8582/wrapper?ctx=65a356ddbacf3a7d0a21a8f266e1d934898d46eb&idx=0. Textile and Fiber Arts, Smithsonian National Musem of African Art, 83-3-8. Used for educational use consistent with the principles of fair use under Section 108 of the U.S. Copyright Act."/>
+						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 					
 					<section class="cluster-details specs" aria-labelledby="details">
