--- a/html/lesson_plans/african_ethiopianism.html
+++ b/html/lesson_plans/african_ethiopianism.html
@@ -46,6 +46,7 @@
 					<div class="aspect-ratio-box">
 						<h2 id="lesson-plan">Ethiopianism</h2>
           	<img loading="" style="object-position: 50% 40%;" src="/img/lesson_plans/uvc_0017-900px.jpg" srcset="/img/lesson_plans/uvc_0017-900px.jpg 900w, /img/lesson_plans/uvc_0017-750px.jpg 750w, /img/lesson_plans/uvc_0017-600px.jpg 600w, /img/lesson_plans/uvc_0017-450px.jpg 450w, /img/lesson_plans/uvc_0017-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Boy and man with arm raised standing in water surrounded by crowd of onlookers, some with umbrellas." title="Baptism by John Chilembwe in Liberia or Malawi. ca. 1900-1915, https://www.loc.gov/pictures/item/93505644/. Library of Congress Prints and Photographs Division. No known restrictions on publication"/>
+						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
           <section class="specs" aria-labelledby="lesson-plan-specs">
