--- a/html/lesson_plans/africa_slavery_theories.html
+++ b/html/lesson_plans/africa_slavery_theories.html
@@ -46,6 +46,7 @@
 					<div class="aspect-ratio-box">
 						<h2 class="bottom" id="lesson-plan">Slavery and Victorian Theories of Sexuality, Desire, and the Family</h2>
           	<img loading="" style="object-position: 50% 60%;" src="/img/lesson_plans/uvc_0014-1500px.jpg" srcset="/img/lesson_plans/uvc_0014-1500px.jpg 1500w, /img/lesson_plans/uvc_0014-1350px.jpg 1350w, /img/lesson_plans/uvc_0014-1200px.jpg 1200w, /img/lesson_plans/uvc_0014-1050px.jpg 1050w, /img/lesson_plans/uvc_0014-900px.jpg 900w, /img/lesson_plans/uvc_0014-750px.jpg 750w, /img/lesson_plans/uvc_0014-600px.jpg 600w, /img/lesson_plans/uvc_0014-450px.jpg 450w, /img/lesson_plans/uvc_0014-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Woman jumping from bridge into water surrounded by men with arms outstretched to catch and stop her." title="Anonymous. “The Death of Clotel.” Clotelle; or, The Colored Heroine: A Tale of the Southern States, by William Wells Brown, Lee & Shepard, 1867, frontispiece, https://babel.hathitrust.org/cgi/pt?id=uc2.ark:/13960/t4kk94s0d&view=1up&seq=8. Public domain."/>
+						<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle" title="Image information"></i></a>
 					</div>
 
           <section class="specs" aria-labelledby="lesson-plan-specs">
